Track large video file with Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-*.mp4 filter=lfs diff=lfs merge=lfs -text
+src/Assets/Videos/fall[[:space:]]23[[:space:]]rush[[:space:]]video.mp4 filter=lfs diff=lfs merge=lfs -text
