--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-image-grid-animator": "^1.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
