--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.3.30",
     "googleapis": "^143.0.0",
+    "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-image-grid-animator": "^1.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
