--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "website",
   "version": "0.9.0",
   "private": true,
+  "homepage": "https://akpsi-pipsi-pres.github.io/website/",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
