--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@fontsource/roboto": "^5.0.14",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "css-select": "^5.1.0",
     "framer-motion": "^11.3.30",
     "googleapis": "^143.0.0",
     "lucide-react": "^0.439.0",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -22,6 +27,8 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "recharts": "^2.12.7",
+    "resolve-url-loader": "^5.0.0",
+    "svgo": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +57,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "dotenv": "^16.4.5",
     "prettier": "3.3.3"
   }
