--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "build": "cross-env CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^10.0.0",
     "dotenv": "^16.4.5",
     "prettier": "3.3.3"
   }
